# boeingx.github.io

./: .ghci  .gitignore  .travis.yml  404.html  LICENSE  README.md  boeingx.cabal  contact.html  contact.md  index.html  posts.html  preview  site.hs  style.css
css/: base.css  syntax.css
files/: benchmark-reading-ints.html
posts/: 2015-08-23-example.md  2018-10-21-understanding-the-it-variable-in-ghci.html  2018-10-21-understanding-the-it-variable-in-ghci.md  2018-10-30-foldr-and-implementation-of-list-index-operator-in-haskell.html  2018-10-30-foldr-and-implementation-of-list-index-operator-in-haskell.md  2018-10-30-foldr-and-the-implementation-of-list-index-operator-in-haskell.md  2018-10-30-the-implementation-of-list-index-operator-in-haskell.md  2018-11-03-read-integers-efficiently-in-haskell.html  2018-11-03-read-integers-efficiently-in-haskell.md  2018-11-15-write-slides-with-literate-haskell-and-latex-beamer.html  2018-11-15-write-slides-with-literate-haskell-and-latex-beamer.md  2019-03-01-molecule-to-atoms.html  2019-03-01-molecule-to-atoms.md
tags/: Alex.html  Happy.html  beamer.html  haskell.html  latex.html  literate programming.html  parsing.html  performance.html
templates/: content.html  default.html  post.html
