name:                boeingx
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              BoeingX
maintainer:          user@domain.com
copyright:           BSD3
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable boeingx
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
